feat(init): init

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: '记录西瓜水果想记的东西'
 description: ''
 keywords:
 author: 西瓜水果
-language: zh-Hans
+language: zh-CN
 timezone: 'Asia/Shanghai'
 
 # URL
@@ -96,7 +96,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
